--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"
-    </head>
-    <body>Hello, world!</body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" </head>
+
+<body>
+    <h1>Music Magic</h1>
+    <div class="piano">
+        <div class="keys">
+            <div class="key white" id="note-c"></div>
+            <div class="key black" id="note-c-sharp"></div>
+            <div class="key white" id="note-d"></div>
+            <div class="key black" id="note-d-sharp"></div>
+            <div class="key white" id="note-e"></div>
+            <div class="key white" id="note-f"></div>
+            <div class="key black" id="note-f-sharp"></div>
+            <div class="key white" id="note-g"></div>
+            <div class="key black" id="note-g-sharp"></div>
+            <div class="key white" id="note-a"></div>
+            <div class="key black" id="note-a-sharp"></div>
+            <div class="key white" id="note-b"></div>
+        </div>
+    </div>
+</body>
+
 </html>
