--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <div class="key white" id="note-b"></div>
         </div>
     </div>
+
+    <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
